@@ -1,3 +1,7 @@
+Nov 16, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- update german translation
+- add custom arguments for FragOps UT2 mod
+
 Nov 16, 2003: Alex <alex_b@users.sourceforge.net>
 - Added Luca Camillo <kamy at tutorials.it> to the help about screen
   for submitted logos
